@@ -26,7 +26,7 @@
 static void man_getopt (int argc, char *argv[]);
 static __inline__ const char *is_section (const char *name);
 static __inline__ char **get_section_list (void);
-static int man (const char *name);
+static int man (const char *name, int *found);
 static int display (const char *dir, const char *man_file,
 		    const char *cat_file, const char *title,
 		    const char *dbfilters);
