@@ -1,3 +1,14 @@
+Mon Apr  7 09:12:27 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (man): Call local_man_loop() straight away if name
+	  contains a slash. Make the number of pages found an output
+	  argument rather than the return value, so that we can include
+	  local_man_loop()'s return behaviour.
+	  (main): Update throughout for new man() signature. Don't call
+	  local_man_loop() if man() returns an error, as man() now sorts
+	  that out for itself.
+	* src/man.h (man): Update prototype.
+
 Mon Apr  7 08:09:08 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* include/Defines.in: Generate dependencies in .depend rather than
